<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >


        <TextView
            android:id="@+id/til1"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/til1"
            android:textAlignment="center"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/dir1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/til1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/dir1"
            android:textAlignment="center"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/dir2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dir1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/dir2"
            android:textAlignment="center"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/dir3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dir2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/dir3"
            android:textAlignment="center"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/dir4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dir3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/dir4"
            android:textAlignment="center"
            android:textAllCaps="false" />


        <TextView
            android:id="@+id/til2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dir4"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/til2"
            android:textAlignment="center"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/dir21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/til2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/dir21"
            android:textAlignment="center"
            android:textAllCaps="false" />


        <TextView
            android:id="@+id/dir22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dir21"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/dir22"
            android:textAlignment="center"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/til3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dir22"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/til3"
            android:textAlignment="center"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/dir31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/til3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/dir31"
            android:textAlignment="center"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/dir32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dir31"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/dir32"
            android:textAlignment="center"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/dir33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dir32"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/dir33"
            android:textAlignment="center"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/dir34"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dir33"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/dir34"
            android:textAlignment="center"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/dir35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dir34"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/dir35"
            android:textAlignment="center"
            android:textAllCaps="false" />


        <TextView
            android:id="@+id/til4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dir35"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/til4"
            android:textAlignment="center"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/dir41"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/til4"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/dir41"
            android:textAlignment="center"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/dir42"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dir41"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/dir42"
            android:textAlignment="center"
            android:textAllCaps="false" />


    </RelativeLayout>
</ScrollView>